Move EclipseRDFModelUrlTest to a new emc.rdf.dt.tests project